# internal/models/user.go
@@ -8,7 +8,7 @@ type User struct {
 	UserId           int    `gorm:"primaryKey" json:"userId"`
 	Login            string `json:"login" binding:"required,max=64"`
 	IsAdmin          bool   `json:"isAdmin" gorm:"column:is_moderator"`
-	Password         string `json:"password,omitempty" binding:"required,min=8,max=64"`
+	Password         string `json:"-" binding:"required,min=8,max=64"`
 }
 
 type UserLogin struct {
